# droners

./: Cargo.toml  README.md  aeroflight.code-workspace  droners.code-workspace  memory.x  stm32f4.ioc
.cargo/: config
components/: Cargo.toml
components/src/: esc.rs  internal.rs  lib.rs  neo6m.rs  sx1278.rs
components/src/ak8963/: config.rs  mod.rs  register.rs  result.rs
components/src/e32/: command.rs  config.rs  mod.rs  op.rs
components/src/mpu6500/: config.rs  mod.rs  register.rs  result.rs
components/src/mpu925x/: config.rs  mod.rs  result.rs
components/src/ublox/: mod.rs  result.rs
flightcontrol/: Cargo.toml  stm32f4.ioc
flightcontrol/src/: main.rs  typedefs.rs
navigation/: Cargo.toml  stm32f4.ioc
navigation/src/: main.rs
src/: esc.rs  main.rs  typedefs.rs
src/e32/: mod.rs  result.rs
transmitter/: Cargo.toml  stm32f4.ioc
transmitter/src/: main.rs  typedefs.rs
