[package]
name = "aeroflight-components"
version = "0.1.0"
authors = ["Dimitri Popov <personal@dimaa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
stm32f4xx-hal = { git = "https://github.com/DimaaIO/stm32f4xx-hal", branch = "dma-tim", features = ["stm32f411", "rt"] }
cortex-m = "0.6.4"
nb = "1.0.0"

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.2.0"
nalgebra = { version = "0.23.0", default-features = false }
nmea0183 = "0.2.3"
heapless = "0.5.6"

crc = { version = "1.8.1", default-features = false }
