[package]
name = "droners-control"
version = "0.1.0"
authors = ["Dimitri Popov <personal@dimaa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flightcontrol"
path = "src/main.rs"
test = false
bench = false

[dependencies]
embedded-hal = "0.2.4"
stm32f4xx-hal = { git = "https://github.com/DimaaIO/stm32f4xx-hal", branch = "dma-tim", features = ["stm32f411", "rt"] }
nb = "1.0.0"
cortex-m = "0.6.4"
cortex-m-semihosting = "0.3.7"
cortex-m-rtic = "0.5.5"
panic-halt = "0.2.0"

droners-components = { path = "../components" }
